# pickpocket-rust

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md
src/: configuration.rs  logger.rs  main.rs
src/articles/: api.rs  article.rs  inventory.rs  library.rs  mod.rs
src/authentication/: mod.rs  oauth.rs  token_handler.rs
