[package]
name = "pickpocket"
description = "Pickpocket: selects a random article from your Pocket (former Read It Later)"
homepage = "https://github.com/tiagoamaro/pickpocket-rust"
repository = "https://github.com/tiagoamaro/pickpocket-rust"
license = "MIT"
version = "0.1.1"
authors = ["Tiago Amaro <tiagopadrela@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
dirs = "1.0.5"
open = "1.2.2"
rand = "0.6.5"
reqwest = "0.9.15"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.8.8"
url = "1.7.2"
