[package]
name = "pickpocket"
description = "Pickpocket: selects a random article from your Pocket (former Read It Later)"
homepage = "https://github.com/tiagoamaro/pickpocket-rust"
repository = "https://github.com/tiagoamaro/pickpocket-rust"
license = "MIT"
version = "0.1.1"
authors = ["Tiago Amaro <tiagopadrela@gmail.com>"]
edition = "2021"

[dependencies]
clap = "2.33.0"
dirs = "5.0.1"
open = "5.0.0"
rand = "0.8.5"
reqwest = "0.11"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.39"
serde_yaml = "0.9.25"
url = "2.4.0"
tokio = { version = "1.32.0", features = ["full"] }

